--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width">
 
-        <title>Eyes wide open</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <div class="container">
-            <header>
-                <h1>TWICE</h1>
-            </header>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+
+    <title>Eyes wide open</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <div class="container">
+        <header>
+            <h1>TWICE</h1>
+        </header>
+
+        <div class="content">
+
             <section class="information">
                 <h1>Eyes wide open</h1>
                 <p class="type">Album</p>
@@ -19,11 +24,29 @@
                 <div class="description">
                     <img src="img/twice.jpeg" alt="TWICEジャケット写真">
                     <p>TWICE 10枚目のアルバム。</p>
-                    <p>新曲を含む全13曲を収録。<br>
-                    ぜひご視聴ください。</p>
+                    <p>新曲を含む全6曲を収録。<br>
+                        ぜひご視聴ください。</p>
                 </div>
-                
+
+            </section>
+
+            <section class="songs">
+                <h2>収録曲</h2>
+                <ol class="clearfix">
+                    <li><a href="https://www.youtube.com/watch?v=CM4CkVFmTds" target="_self">I CAN'T STOP ME</a></li>
+                    <li>HELL IN HEAVEN</li>
+                    <li>UP NO MORE</li>
+                    <li>DO WHAT WE LIKE</li>
+                    <li>BRING IT BACK</li>
+                    <li>BELIEVER</li>
+                </ol>
+
             </section>
         </div>
-    </body>
+        <footer>
+            &copy; 2021 TWICE
+        </footer>
+    </div>
+</body>
+
 </html>
